--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@ng-bootstrap/ng-bootstrap": "^12.0.2",
+    "angular-cli-ghpages": "^1.0.0",
     "angular-responsive-carousel": "^2.1.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
